<resources>
    <string name="app_name">AmusicLyrics</string>
    <!-- FRAGMENTS -->
    <!-- LOGIN FRAGMENT -->
    <string name="loginButton">Entrar</string>
    <string name="registerButton">Quero me registrar!</string>
    <string name="forgotPassButton">Esqueci minha senha!</string>
    <string name="emailHint">E-mail</string>
    <string name="passwordHint">Senha</string>
    <string name="madeBy">Esse aplicativo foi desenvolvido por Ramon Barros</string>
    <string name="logoContentDesc">Imagem, Logomarca do AmusicLyrics</string>
    <string name="login">Acesse a sua conta!</string>

    <!-- REGISTER FRAGMENT -->
    <string name="entryRegisterButton">Cadastrar</string>
    <string name="register">Crie uma conta agora!</string>

    <!--SEARCH FRAGMENT -->
    <string name="searchButton">Buscar música</string>
    <string name="searchYourSong">Busque sua música favorita!</string>
    <string name="findMusicHint">Digite aqui aquela música que dói!</string>

    <!-- FORGOT PASSWORD FRAGMENT -->
        <string name="forgotPassword">Esqueceu sua senha?</string>
        <string name="insertYourRegisteredEmail">Insira seu e-mail cadastrado.</string>
        <string name="entryForgotButton">Resetar Senha</string>

    <!-- SUCCESS AND ERRORS -->

    <!-- LOGIN SUCCESS MESSAGES -->
    <string name="connectionStabilished">Conexão Estabelecida!</string>
    <!-- LOGIN ERROR MESSAGES -->
    <string name="emptyEmail">O email é obrigatório.</string>
    <string name="emptyPassword">A senha é obrigatória</string>
    <string name="passwordMinimumLimit">A senha deve conter ao menos 6 caracteres.</string>
    <string name="passwordMaximumLimit">A senha não deve conter mais que 15 caracteres.</string>
    <string name="invalidEmail">O e-mail inserido é inválido.</string>
    <string name="incorrectAuth">Senha incorreta ou conta não existente.</string>
    <!-- REGISTER SUCCESS MESSAGES -->
    <string name="accountCreated">Sua conta foi criada com sucesso!</string>
    <!-- REGISTER ERROR MESSAGES -->

    <!-- RESETPASS SUCCESS MESSAGES -->

    <!-- RESETPASS ERROR MESSAGES -->
        <string name="passwordReset">SUCESSO! Veja a sua caixa de entrada para finalizar o processo de reabilitação da senha.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
    <!--    <string name=""></string>-->
</resources>